添加 content_type 以及对应的fields

--- a/protected/modules/yii/forms/content_type.yaml
+++ b/protected/modules/yii/forms/content_type.yaml
@@ -11,6 +11,10 @@ columns:
    commit: 
       name:commit
       filter:false
+   fields    
+      filter:false
+      name:fields
+      type:raw  
 search:
    id:textField
    slug:textField
