support modules & content type clone code *.json to modules/$name/data  will install ,when install module

--- a/protected/modules/yii/forms/content_type_form.yaml
+++ b/protected/modules/yii/forms/content_type_form.yaml
@@ -3,4 +3,9 @@ title:Manage Content Type
 columns:  
    slug:textField
    name:textField
+   display:
+          html:dropDownList  
+          1:'Yes'
+          2:'No'
    commit:textArea
+  
